--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
                     <script>insnc("imIntermediate");</script>&nbsp;<a
                         onclick="menuItemClick('Intermediate')">Intermediate</a>&nbsp;<br>
                     <script>insnc("imExpert");</script>&nbsp;<a onclick="menuItemClick('Expert')">Expert</a>&nbsp;<br>
-                    <script>insnc("imCustom");</script>&nbsp;<a onclick="menuItemClick('Custom')">Custom</a>&nbsp;<br>
-                    <hr>
-                    <script>insnc("");</script>&nbsp;<a onclick="return menuItemClick('Personal')">Personal
-                        Best</a>
+                    <script>insnc("imCustom");</script>&nbsp;<a onclick="menuItemClick('Custom')">Custom</a>
+                    <script>insnc("")</script>
                     <script>insnc("")</script>
                     <script>insnc("")</script>
                 </td>
